chore: initial commit

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-VITE_APP_API_URL=https://api.bulletproofapp.com
-VITE_APP_APP_URL=http://localhost:3000
+VITE_APP_API_URL=
+VITE_APP_API_VERSION=
+
+VITE_APP_APP_URL=
