--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "build": "tsc -b && vite build --base=/",
+    "lint": "eslint src --ignore-pattern .gitignore",
+    "lint:fix": "eslint src --ignore-pattern .gitignore --fix",
+    "check-types": "tsc --project tsconfig.json --pretty --noEmit",
     "preview": "vite preview",
     "prepare": "husky"
   },
@@ -26,13 +27,11 @@
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.513.0",
-    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.57.0",
-    "react-query-auth": "^2.4.3",
     "react-router": "^7.6.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
@@ -60,6 +59,7 @@
     "eslint-plugin-tailwindcss": "^3.18.0",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
+    "lint-staged": "^16.1.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.12",
     "tw-animate-css": "^1.3.4",
@@ -67,5 +67,11 @@
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4"
+  },
+  "lint-staged": {
+    "*.+(ts|tsx)": [
+      "pnpm lint",
+      "bash -c 'pnpm check-types'"
+    ]
   }
 }
